fixed weather summary to not be stuck to the top

--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -42,7 +42,7 @@
   }
   #weather-summary {
     position: absolute;
-    top: 0px;
+    top: 20px;
     left: 20px;
     background-color: rgba(0,46,93,.8);
     color: white;
